# ComputerGraphic

./: CMakeLists.txt  Object.cpp  Object.h  README.md  Shader.cpp  Shader.h  main.cpp  shader.frag  shader.vert
glad/include/glad/: glad.h
glad/src/: glad.c
